--- a/_config.yml
+++ b/_config.yml
@@ -7,25 +7,21 @@ highlighter: rouge
 markdown: kramdown
 disqus: dbyll
 google_analytics: dbyll
-title: dbyll
+title: The Daily Commit
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: The Daily Commit
 
-description: Stylish Jekyll Theme
+description: Stories about web development, hacking and learning cool stuff.
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: Vinicius Costa
+  email: viniciuscosta0197@gmail.com
+  github: vinicius0197
+  bio: Nothing yet!
 
 rss_path: feed.xml
 categories_path: categories.html
